[package]
name = "amnion"
authors = ["Soc Virnyl Estela <socvirnyl.estela@gmail.com>"]
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE", "README.md", "assets/*", "docs/*"]
rust-version = "1.59"

[workspace]
members = [
  "amnion-backend",
  "amnion-frontend"
]

[dependencies]
megalodon = { version = "0.1" }
iced = "0.4"
amnion-backend = { path = "amnion-backend/", version = "0.1.0" }
amnion-frontend = { path = "amnion-frontend", version = "0.1.0" }
