[package]
name = "amnion-backend"
authors = ["Soc Virnyl Estela <socvirnyl.estela@gmail.com>"]
description = "Backend library for amnion"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.66"
megalodon = "0.2.0"
native-dialog = "0.6.3"
openssl-sys = "0.9"
openssl = "0.10"
shared_child = "1.0.0"
strum = { version = "0.24.1", features = ["derive"] }
