[package]
name = "amnion-frontend"
authors = ["Soc Virnyl Estela <socvirnyl.estela@gmail.com>"]
description = "Frontend library for amnion"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
iced = "0.4.2"
iced_aw = { version = "0.2.0", features = ["tabs", "modal", "card"], default-features = false }
iced_native = "0.5.1"
native-dialog = "0.6.3"
